<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.splash.SplashActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/HeaderBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:popupTheme="@style/ActionBarPopupThemeOverlay"
            app:theme="@style/ActionBarThemeOverlay"
            tools:title="@tools:sample/lorem" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:listitem="@layout/item_news_view" />

    </android.support.constraint.ConstraintLayout>
</layout>